--- a/community.html
+++ b/community.html
@@ -51,7 +51,7 @@
 			<li>affordable housing & anti-gentrification organizing</li>
 			<li>fossil fuel divestment campaigning</li>
 			<li>trans rights & community-building</li>
-			<li>anti-war organizing (you know which one)</li>
+			<li>anti-war organizing (...you know which one)</li>
 		  </ul>
 		</div>
 		<div style="display:inline-block;width:48%;float:right;">
@@ -86,7 +86,7 @@
             <a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
 	    <img src="assets/WZO-PRF.jpg" class="card-img"></img>
             <div class="container">
-            	<p>Personal Essay: American Jews and "Israel"</p>
+            	<p>Personal Essay: American Jews and Israel</p>
             	<p class="caption-text">commentary on the personal and political factors that have manufactured American Jewish support for the state of Israel.</p>
 	    	<p>email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
             </div>
