--- a/community.html
+++ b/community.html
@@ -77,6 +77,7 @@
           <img src="assets/deseg.png" class="card-img"></img>
           <div class="container">
             <p>Op-Ed: Zoning Reform Advocacy</p>
+		  <p class="caption-text">
             <p class="caption-text">written while volunteering with Desegregate CT (Jan - Aug 2022)</p>
           </div>
         </a>
@@ -88,7 +89,7 @@
             <div class="container">
             	<p>Personal Essay: American Jews and Israel</p>
             	<p class="caption-text">commentary on the personal and political factors that have manufactured American Jewish support for the state of Israel.</p>
-	    	<p>email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
+	    	<p style="font-size:14px;">email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
             </div>
             </a>
      	  </div>
@@ -99,7 +100,7 @@
           <div class="container">
             <p>Personal Essay: Why I'm Covid Cautious</p>
             <p class="caption-text">personal essay on my experience with and motivations for living a covid-cautious life as a young adult.</p>
-	    <p>email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
+	    <p style="font-size:14px;">email me for the text - <a href="mailto:ndbkeyes@gmail.com">ndbkeyes(@)gmail(.)com</a></p>
           </div>
         </a>
       </div>
