--- a/community.html
+++ b/community.html
@@ -72,7 +72,8 @@
     <!-- Writing Section -->
     <div class="w3-container" id="writing">
       <h3 class="w3-border-bottom w3-border-light-grey">writing</h3>
-      <div class="card">
+	    
+      <div class="card" style="width:200px;">
         <a href="https://www.ctpost.com/opinion/article/Opinion-Mobilize-CT-toward-racially-equitable-17186776.php" class="div-link" target="_blank" rel="noopener noreferrer">
           <img src="assets/deseg.png" class="card-img"></img>
           <div class="container">
@@ -83,7 +84,7 @@
         </a>
       </div>
 	  
-	  <div class="card">
+	  <div class="card" style="width:200px;">
             <a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
 	    <img src="assets/WZO-PRF.jpg" class="card-img"></img>
             <div class="container">
@@ -93,7 +94,7 @@
             </a>
      	  </div>
 	  
-	  <div class="card">
+	  <div class="card" style="width:200px;">
         	<a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
 		<img src="assets/mask-up.jpg" class="card-img"></img>
           <div class="container">
