--- a/community.html
+++ b/community.html
@@ -44,29 +44,29 @@
     <div class="w3-container" id="organizing">
       <h3 class="w3-border-bottom w3-border-light-grey">organizing</h3>
       
-		<div style="display:inline-block;width:48%;float:left;">
-		  <p>I have been part of a variety of activist & community groups, which I will not name here. But I will share some areas of organizing I've been involved with:</p>
-		  <ul>
-			<li>mutual aid work</li>
-			<li>affordable housing & anti-gentrification organizing</li>
-			<li>fossil fuel divestment campaigning</li>
-			<li>trans rights & community-building</li>
-			<li>anti-war organizing (...you know which one)</li>
-		  </ul>
-		</div>
-		<div style="display:inline-block;width:48%;float:right;">
-		  <p>And below are some of the types of work I have done within organizing spaces, to give a sense of my range of skills and experiences:</p>
-		  <ul>
-			<li>organizing sit-ins</li>
-			<li>writing grants</li>
-			<li>facilitating meetings</li>
-			<li>planning/supporting/hosting community events</li>
-			<li>distributing food</li>
-			<li>developing presentations</li>
-			<li>contributing to art builds</li>
-		  </ul>
-		</div>
+	<div style="display:inline-block;width:48%;float:left;">
+	  <p>I have been part of a variety of activist & community groups, which I will not name here. But I will share some areas of organizing I've been involved with:</p>
+	  <ul>
+		<li>mutual aid work</li>
+		<li>affordable housing & anti-gentrification organizing</li>
+		<li>fossil fuel divestment campaigning</li>
+		<li>trans rights & community-building</li>
+		<li>anti-war organizing (...you know which one)</li>
+	  </ul>
 	</div>
+	<div style="display:inline-block;width:48%;float:right;">
+	  <p>And below are some of the types of work I have done within organizing spaces, to give a sense of my range of skills and experiences:</p>
+	  <ul>
+		<li>organizing sit-ins</li>
+		<li>writing grants</li>
+		<li>facilitating meetings</li>
+		<li>planning/supporting/hosting community events</li>
+		<li>distributing food</li>
+		<li>developing presentations</li>
+		<li>contributing to art builds</li>
+	  </ul>
+	</div>
+     </div>
 	  
 
     <!-- Writing Section -->
@@ -106,7 +106,7 @@
 
 	<div class="card" style="width:300px;">
             <a href="https://imfromdriftwood.com/story/student-fights-to-change-school-dress-code-and-wins-i-should-be-allowed-to-wear-a-suit/" class="div-link" target="_blank" rel="noopener noreferrer">
-	    <img src="assets/driftwood.jpg" class="card-img"></img>
+	    <img src="assets/driftwood.png" class="card-img"></img>
             <div class="container">
 		<p>Interview: Student Fights to Change Dress Code - And Wins</p>
         	<p style="font-size:14px;">interview about my experience as a trans high schooler navigating an all-girls' school</p>
