--- a/community.html
+++ b/community.html
@@ -71,10 +71,10 @@
 
     <!-- Writing Section -->
     <div class="w3-container" id="writing">
-      <h3 class="w3-border-bottom w3-border-light-grey">writing</h3>
+      <h3 class="w3-border-bottom w3-border-light-grey">writing (etc.)</h3>
 	    
 	    
-	<div class="card" style="width:300px;">
+	<div class="card" style="width:250px;">
 	  <a href="https://www.ctpost.com/opinion/article/Opinion-Mobilize-CT-toward-racially-equitable-17186776.php" class="div-link" target="_blank" rel="noopener noreferrer">
 	  <img src="assets/deseg.png" class="card-img"></img>
 	  <div class="container">
@@ -84,7 +84,7 @@
 	  </a>
       	</div>
 	  
-	<div class="card" style="width:300px;">
+	<div class="card" style="width:250px;">
 	    <a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
 	    <img src="assets/WZO-PRF.jpg" class="card-img"></img>
 	    <div class="container">
@@ -94,7 +94,7 @@
 	    </a>
 	</div>
 	  
-	<div class="card" style="width:300px;">
+	<div class="card" style="width:250px;">
             <a href="mailto:ndbkeyes@gmail.com" class="div-link" target="_blank" rel="noopener noreferrer">
 	    <img src="assets/mask-up.jpg" class="card-img"></img>
             <div class="container">
@@ -104,7 +104,7 @@
           </a>
       	</div>
 
-	<div class="card" style="width:300px;">
+	<div class="card" style="width:250px;">
             <a href="https://imfromdriftwood.com/story/student-fights-to-change-school-dress-code-and-wins-i-should-be-allowed-to-wear-a-suit/" class="div-link" target="_blank" rel="noopener noreferrer">
 	    <img src="assets/driftwood.png" class="card-img"></img>
             <div class="container">
