--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h3 class="w3-border-bottom w3-border-light-grey">about</h3>
       <div>
 		<p id="bio1" style="whitespace:pre-line;">I'm Nash Keyes (they/them), an early-career professional in climate adaptation and planning. I am passionate about the intersections of urban studies, geography, water, and environmental justice, including community-based adaptation planning, fighting green gentrification, and extreme heat and flood community preparedness. My skills range from GIS, climate science, mathematical modeling, and research to writing, design, public speaking, and facilitation.</p>
-		<p id="bio2" style="whitespace:pre-line;">I graduated from Yale University in 2021 with a B.A. in Applied Mathematics focusing on Climate Science. Currently, I am an ORISE Fellow at the U.S. Environmental Protection Agency's Office of Water working on equitable water utility climate adaptation, and I plan to pursue a joint masters in urban planning and geographical & environmental systems next year. Outside of work, I am an avid amateur woodworker and fledgling community organizer.</p>
+		<p id="bio2" style="whitespace:pre-line;">I graduated from Yale University in 2021 with a B.A. in Applied Mathematics focusing on Climate Science. Currently, I am an ORISE Fellow at the U.S. Environmental Protection Agency's Office of Water working on equitable water utility climate adaptation, and I plan to pursue local-level equitable climate adaptation work and/or a masters degree in geography in the near future. Outside of work, I am an avid amateur woodworker and fledgling community organizer.</p>
 </p></div>
     </div>
 
