updated organizing skills

--- a/community.html
+++ b/community.html
@@ -57,13 +57,14 @@
 		<div style="display:inline-block;width:48%;float:right;">
 		  <p>And below are some of the types of work I have done within organizing spaces, to give a sense of my range of skills and experiences:</p>
 		  <ul>
-			<li>organizing sit-ins</li>
-			<li>writing grants</li>
 			<li>facilitating meetings</li>
 			<li>planning/supporting/hosting community events</li>
 			<li>distributing food</li>
+			<li>writing grant applications</li>
+			<li>supporting community co-design process</li>
 			<li>developing presentations</li>
 			<li>contributing to art builds</li>
+			<li>organizing sit-ins</li>
 		  </ul>
 		</div>
 	</div>
